test/TestPhases/namecheck/invalid/declShadowsImportblc.blc
import M "../imports/importMe"

module exposes M

struct M
    var a: bool
end
